--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,17 @@
 <resources>
     <string name="app_name">ituensApp</string>
 
-<!--    Permission-->
+    <!--    Permission-->
 
     <string name="permission_dialog_title">권한이 거부되었습니다</string>
     <string name="permission_dialog_description">앱을 이용하기 위해선 모든 권한에 동의가 필요합니다</string>
     <string name="permission_dialog_positive_title">설정</string>
     <string name="permission_dialog_negative_title">종료</string>
 
-<!--    Main-->
+    <!--    Main-->
     <string name="main_list_tab_title">List</string>
     <string name="main_favorite_tab_title">Favorite</string>
 
+    <!--    Database-->
+    <string name="database_failed">데이터베이스를 읽어오는데 실패하였습니다</string>
 </resources>
